fix: cloud run port

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -38,9 +38,10 @@ steps:
    - '--region'
    - '${_GCP_REGION}'
    - '--allow-unauthenticated'
-   - '--port 8000'
+   - '--port'
+   - '${_PORT}'
    - '--set-env-vars'
-   - 'GCP_PROJECT_ID=${_GCP_PROJECT_ID},BQ_DATASET=${_BQ_DATASET},BQ_TABLE_NAME=${_BQ_TABLE_NAME},GCS_BUCKET_NAME=${_GCS_BUCKET_NAME},GCS_CSV_FILE_PATH=${_GCS_CSV_FILE_PATH},PORT=${_PORT}'
+   - 'GCP_PROJECT_ID=${_GCP_PROJECT_ID},BQ_DATASET=${_BQ_DATASET},BQ_TABLE_NAME=${_BQ_TABLE_NAME},GCS_BUCKET_NAME=${_GCS_BUCKET_NAME},GCS_CSV_FILE_PATH=${_GCS_CSV_FILE_PATH}'
 
 images:
 - '${_GCP_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REGISTRY_REPO}/${_IMAGE_NAME}:$COMMIT_SHA'
